--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h1>About <span>Me</span></h1>
                 <h2>Front-end Developer</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident at accusantium ipsa, neque eius sequi quae! Maxime cupiditate optio, nostrum odio consequuntur esse laborum ipsum consequatur natus porro possimus quo.</p>
-                <a href="#" download="Semir_Kardovikj-CV" class="resume"><i class="fas fa-download "></i> Download resume</a>
+                <a href="/img/SemirKardovikj_CV.pdf" download="Semir_Kardovikj-CV" class="resume"><i class="fas fa-download "></i> Download resume</a>
             </div>
         </div>
        </section>
@@ -87,7 +87,7 @@
         <div class="f-logo"><h1><span>S</span>emir <span>K</span>ardovikj</h1></div>
         <div class="social-links">
             <a href="https://www.facebook.com/semir.kardovich" target="_blank" class="icon"><i class="fab fa-facebook"></i></a>  
-            <a href="#" class="icon"><i class="fab fa-linkedin"></i></a>  
+            <a href="https://www.linkedin.com/in/semir-kardovic-12322a1b6" class="icon"><i class="fab fa-linkedin"></i></a>  
             <a href="https://github.com/SemirKardovich" target="_blank" class="icon"><i class="fab fa-github"></i></a>
         </div>
     </footer>
