--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h1>About <span>Me</span></h1>
                 <h2>Front-end Developer</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident at accusantium ipsa, neque eius sequi quae! Maxime cupiditate optio, nostrum odio consequuntur esse laborum ipsum consequatur natus porro possimus quo.</p>
-                <a href="/img/SemirKardovikj_CV.pdf" download="Semir_Kardovikj-CV" class="resume"><i class="fas fa-download "></i> Download resume</a>
+                <a href="/img/SemirKardovikj_CV.pdf" download="SemirKardovikj_CV.pdf" class="resume"><i class="fas fa-download "></i> Download resume</a>
             </div>
         </div>
        </section>
