About me txt changed

--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
                 <img src="./img/portrait.jpg" alt="portrait"> 
             </div> 
             <div class="about-txt">
-                <h1>About <span>Me</span></h1>
-                <h2>Front-end Developer</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident at accusantium ipsa, neque eius sequi quae! Maxime cupiditate optio, nostrum odio consequuntur esse laborum ipsum consequatur natus porro possimus quo.</p>
+                <h1>Hello,</h1>
+                <h2>a bit <span>about me</span> :</h2>
+                <p> I am a Front-end Web Developer from Skopje.<br>
+                    I enjoy turning complex problems into simple, beautiful and responsive websites.<br>
+                    When I'm not coding, you'll find me hanging out with my friends or riding my mountain bike.</p>
                 <a href="https://github.com/SemirKardovich/MyWeb/raw/master/img/SemirKardovikj_CV.pdf" class="resume"><i class="fas fa-download "></i> Download resume</a>
             </div>
         </div>
