--- a/index.html
+++ b/index.html
@@ -8,93 +8,94 @@
     <title>Semir Kardovikj | Web Developer</title>
 </head>
 <body>
-    <header>
-        <!-- Navigation -->
-        <nav id="nav">
-            <div class="nav-bar">
-                <h1 class="logo">
-                    <span>S</span>emir <span>K</span>ardovikj
-                </h1>
-                <div class="hamburger" id="hamburger"><div class="bar"></div></div>
-                <ul class="nav-links" id="nav-links">
-                    <li><a href="#home" data-after="Home" class="nav-link">Home</a></li>
-                    <li><a href="#about" data-after="About Me" class="nav-link">About Me</a></li>
-                    <li><a href="#projects" data-after="Projects" class="nav-link">Projects</a></li>
-                    <li><a href="#contact" data-after="Contact" class="nav-link">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
-        <!-- End Navigation -->
-        <!-- Showcase -->
-        <section class="home" id="home">
-            <div class="hero container">
-                <div>
-                    <h1>Hello,<span></span></h1>
-                    <h1>My Name Is<span></span></h1>
-                    <h1>Semir.<span></span></h1>
-                    <a href="#projects"  class="btn">Portfolio</a>
+    <div class="container">
+        <header>
+            <!-- Navigation -->
+            <nav id="nav">
+                <div class="nav-bar">
+                    <h1 class="logo">
+                        <span>S</span>emir <span>K</span>ardovikj
+                    </h1>
+                    <div class="hamburger" id="hamburger"><div class="bar"></div></div>
+                    <ul class="nav-links" id="nav-links">
+                        <li><a href="#home" data-after="Home" class="nav-link">Home</a></li>
+                        <li><a href="#about" data-after="About Me" class="nav-link">About Me</a></li>
+                        <li><a href="#projects" data-after="Projects" class="nav-link">Projects</a></li>
+                        <li><a href="#contact" data-after="Contact" class="nav-link">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <!-- End Navigation -->
+            <!-- Showcase -->
+            <section class="home" id="home">
+                <div class="hero container">
+                    <div>
+                        <h1>Hello,<span></span></h1>
+                        <h1>My Name Is<span></span></h1>
+                        <h1>Semir.<span></span></h1>
+                        <a href="#projects"  class="btn">Portfolio</a>
+                    </div>
+                </div>
+            </section>
+            <!-- End Showcase -->
+        <header>
+        <main>
+        <!-- About -->
+        <section id="about">
+            <div class="about-content">
+                <div class="portrait">
+                    <img src="./img/portrait.jpg" alt="portrait"> 
+                </div> 
+                <div class="about-txt">
+                    <h1>Hello,</h1>
+                    <h2>a bit <span>about me</span> :</h2>
+                    <p> I am a Front-end Web Developer from Skopje.<br>
+                        I enjoy turning complex problems into simple, beautiful and responsive websites.<br>
+                        When I'm not coding, you'll find me hanging out with my friends or riding my mountain bike.</p>
+                    <a href="https://github.com/SemirKardovich/MyWeb/raw/master/img/SemirKardovikj_CV.pdf" class="resume"><i class="fas fa-download "></i> Download resume</a>
                 </div>
             </div>
         </section>
-        <!-- End Showcase -->
-    <header>
-    <main>
-    <!-- About -->
-       <section id="about">
-        <div class="about-content">
-            <div class="portrait">
-                <img src="./img/portrait.jpg" alt="portrait"> 
-            </div> 
-            <div class="about-txt">
-                <h1>Hello,</h1>
-                <h2>a bit <span>about me</span> :</h2>
-                <p> I am a Front-end Web Developer from Skopje.<br>
-                    I enjoy turning complex problems into simple, beautiful and responsive websites.<br>
-                    When I'm not coding, you'll find me hanging out with my friends or riding my mountain bike.</p>
-                <a href="https://github.com/SemirKardovich/MyWeb/raw/master/img/SemirKardovikj_CV.pdf" class="resume"><i class="fas fa-download "></i> Download resume</a>
+        <!-- End About -->
+        <!-- Projects -->
+        <section  id="projects">
+            <div class="projects">
+                    <h1>Recent <span>Projects</span></h1>
+                    <div class="projects-container">
+                        <div class="project"></div>
+                        <div class="project"></div>
+                        <div class="project"></div>
+                    </div>
             </div>
-        </div>
-       </section>
-    <!-- End About -->
-    <!-- Projects -->
-       <section  id="projects">
-           <div class="projects">
-                <h1>Recent <span>Projects</span></h1>
-                <div class="projects-container">
-                    <div class="project"></div>
-                    <div class="project"></div>
-                    <div class="project"></div>
+        </section>
+        <!-- End Projects -->
+        <!-- Contact -->
+        <section id="contact">
+            <div class="contact">
+                <h1>Let's <span>Talk</span></h1>
+                <div class="contact-form">
+                    <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/semir.k1612@gmail.com" method="post">
+                            <input type="text" name="name" id="name" placeholder="Your Name" required>
+                            <input type="text" id="email-address" name="replyto" placeholder="Your E-mail" required>
+                            <textarea  name="message" id="message" placeholder="Your message"></textarea>
+                            <input type="hidden" name="subject" id="email-subject" value="Contact from portfolio">
+                            <input class="send" type="submit" value="Submit">
+                    </form>
                 </div>
-           </div>
-       </section>
-    <!-- End Projects -->
-    <!-- Contact -->
-       <section id="contact">
-           <div class="contact">
-               <h1>Let's <span>Talk</span></h1>
-               <div class="contact-form">
-                   <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/semir.k1612@gmail.com" method="post">
-                        <input type="text" name="name" id="name" placeholder="Your Name" required>
-                        <input type="text" id="email-address" name="replyto" placeholder="Your E-mail" required>
-                        <textarea  name="message" id="message" placeholder="Your message"></textarea>
-                        <input type="hidden" name="subject" id="email-subject" value="Contact from portfolio">
-                        <input class="send" type="submit" value="Submit">
-                   </form>
-               </div>
-               
-           </div>
-       </section>
-    <!-- End Contact -->
-    </main> 
-    <footer>
-        <div class="f-logo"><h1><span>S</span>emir <span>K</span>ardovikj</h1></div>
-        <div class="social-links">
-            <a href="https://www.facebook.com/semir.kardovich" target="_blank" class="icon"><i class="fab fa-facebook"></i></a>  
-            <a href="https://www.linkedin.com/in/semir-kardovic-12322a1b6" class="icon"><i class="fab fa-linkedin"></i></a>  
-            <a href="https://github.com/SemirKardovich" target="_blank" class="icon"><i class="fab fa-github"></i></a>
-        </div>
-    </footer>
-
+                
+            </div>
+        </section>
+        <!-- End Contact -->
+        </main> 
+        <footer>
+            <div class="f-logo"><h1><span>S</span>emir <span>K</span>ardovikj</h1></div>
+            <div class="social-links">
+                <a href="https://www.facebook.com/semir.kardovich" target="_blank" class="icon"><i class="fab fa-facebook"></i></a>  
+                <a href="https://www.linkedin.com/in/semir-kardovic-12322a1b6" class="icon"><i class="fab fa-linkedin"></i></a>  
+                <a href="https://github.com/SemirKardovich" target="_blank" class="icon"><i class="fab fa-github"></i></a>
+            </div>
+        </footer>
+    </div>
 
     <script src="https://kit.fontawesome.com/3da4fa6413.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
