--- a/index.html
+++ b/index.html
@@ -62,9 +62,13 @@
             <div class="projects">
                     <h1>Recent <span>Projects</span></h1>
                     <div class="projects-container">
-                        <div class="project"></div>
-                        <div class="project"></div>
-                        <div class="project"></div>
+                        <div class="project">
+                            <div class="project-img">
+                                <img src="./img/smartmockups_kfqzgpjr.png" alt="mockup">
+                            </div>
+                            <a href="https://semirkardovich.github.io/Digital-Crafters/" target="_blank" class="btn">View site</a>
+                            <a href="https://github.com/SemirKardovich/Digital-Crafters" target="_blank" class="btn">View code</a>
+                        </div>
                     </div>
             </div>
         </section>
