--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <!-- Navigation -->
             <nav id="nav">
                 <div class="nav-bar">
-                    <h1 class="logo">
-                        <span>S</span>emir <span>K</span>ardovikj
-                    </h1>
+                    <div class="logo">
+                        <img src="./img/semo-logo.svg" alt="logo" class="logo-img">
+                    </div>
                     <div class="hamburger" id="hamburger"><div class="bar"></div></div>
                     <ul class="nav-links" id="nav-links">
                         <li><a href="#home" data-after="Home" class="nav-link">Home</a></li>
