--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 <div class="about-txt">
                     <h1>Hello,</h1>
                     <h2>a bit <span>about me</span> :</h2>
-                    <p> I am a Front-end Web Developer from Skopje.<br>
-                        I enjoy turning complex problems into simple, beautiful and responsive websites.<br>
+                    <p> I am a Front-end Web Developer from Skopje.
+                        I enjoy turning complex problems into simple, beautiful and responsive websites.
                         When I'm not coding, you'll find me hanging out with my friends or riding my mountain bike.</p>
                     <a href="https://github.com/SemirKardovich/MyWeb/raw/master/img/SemirKardovikj_CV.pdf" class="resume"><i class="fas fa-download "></i> Download resume</a>
                 </div>
@@ -65,8 +65,10 @@
                             <div class="project-img">
                                 <img src="./img/smartmockups_kfqzgpjr.png" alt="mockup">
                             </div>
-                            <a href="https://semirkardovich.github.io/Digital-Crafters/" target="_blank" class="btn">View site</a>
-                            <a href="https://github.com/SemirKardovich/Digital-Crafters" target="_blank" class="btn">View code</a>
+                            <div class="project-links">
+                                <a href="https://semirkardovich.github.io/Digital-Crafters/" target="_blank" class="site-link">View site</a>
+                                <a href="https://github.com/SemirKardovich/Digital-Crafters" target="_blank" class="code-link">View code</a>
+                            </div>
                         </div>
                     </div>
             </div>
@@ -82,7 +84,7 @@
                             <input type="text" id="email-address" name="replyto" placeholder="Your E-mail" required>
                             <textarea  name="message" id="message" placeholder="Your message"></textarea>
                             <input type="hidden" name="subject" id="email-subject" value="Contact from portfolio">
-                            <input class="send" type="submit" value="Submit">
+                            <input class="send" type="submit" value="Send">
                     </form>
                 </div>
                 
