final design change

--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
                                 <a href="https://github.com/SemirKardovich/Digital-Crafters" target="_blank" class="code-link">View code</a>
                             </div>
                         </div>
+                        <div class="project">
+                            <div class="project-img">
+                                <img src="./img/smartmockups_kfsd7bc8.png" alt="mockup">
+                            </div>
+                            <div class="project-links">
+                                <a href="https://github.com/SemirKardovich/MyWeb" target="_blank" class="code-link">View code</a>
+                            </div>
+                        </div>
                     </div>
             </div>
         </section>
@@ -93,12 +101,13 @@
         <!-- End Contact -->
         </main> 
         <footer>
-            <div class="f-logo"><h1><span>S</span>emir <span>K</span>ardovikj</h1></div>
+            
             <div class="social-links">
                 <a href="https://www.facebook.com/semir.kardovich" target="_blank" class="icon"><i class="fab fa-facebook"></i></a>  
                 <a href="https://www.linkedin.com/in/semir-kardovic-12322a1b6" class="icon"><i class="fab fa-linkedin"></i></a>  
                 <a href="https://github.com/SemirKardovich" target="_blank" class="icon"><i class="fab fa-github"></i></a>
             </div>
+            <div class="f-logo"><img src="./img/semo-logo.svg" alt="logo" class="logo-img"></div>
         </footer>
     
 
