--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                                 <img src="./img/smartmockups_kfsd7bc8.png" alt="mockup">
                             </div>
                             <div class="project-links">
+                                <a href="https://semirkardovich.github.io/MyWeb/" target="_blank" class="site-link">View site</a>
                                 <a href="https://github.com/SemirKardovich/MyWeb" target="_blank" class="code-link">View code</a>
                             </div>
                         </div>
