--- a/index.html
+++ b/index.html
@@ -79,6 +79,15 @@
                                 <a href="https://github.com/SemirKardovich/MyWeb" target="_blank" class="code-link">View code</a>
                             </div>
                         </div>
+                        <div class="project">
+                            <div class="project-img">
+                                <img src="./img/smartmockups_kfvme45d.png" alt="mockup">
+                            </div>
+                            <div class="project-links">
+                                <a href="https://semirkardovich.github.io/Password-Generator/" target="_blank" class="site-link">View site</a>
+                                <a href="https://github.com/SemirKardovich/Password-Generator" target="_blank" class="code-link">View code</a>
+                            </div>
+                        </div>
                     </div>
             </div>
         </section>
