new project added

--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
                                 <a href="https://github.com/SemirKardovich/Password-Generator" target="_blank" class="code-link">View code</a>
                             </div>
                         </div>
+                        <div class="project">
+                            <div class="project-img">
+                                <img src="./img/smartmockups_khkqshb8.png" alt="mockup">
+                            </div>
+                            <div class="project-links">
+                                <a href="https://semirkardovich.github.io/To-Do-List/" target="_blank" class="site-link">View site</a>
+                                <a href="https://github.com/SemirKardovich/To-Do-List" target="_blank" class="code-link">View code</a>
+                            </div>
+                        </div>
                     </div>
             </div>
         </section>
