new project added

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                     <h1>Recent <span>Projects</span></h1>
                     <div class="projects-container">
                         <div class="project">
+                            <h4 class="project-title">Digital Crafters</h4>
                             <div class="project-img">
                                 <img src="./img/smartmockups_kfqzgpjr.png" alt="mockup">
                             </div>
@@ -71,6 +72,7 @@
                             </div>
                         </div>
                         <div class="project">
+                            <h4 class="project-title">My website</h4>
                             <div class="project-img">
                                 <img src="./img/smartmockups_kfsd7bc8.png" alt="mockup">
                             </div>
@@ -80,6 +82,7 @@
                             </div>
                         </div>
                         <div class="project">
+                            <h4 class="project-title">Password Generator</h4>
                             <div class="project-img">
                                 <img src="./img/smartmockups_kfvme45d.png" alt="mockup">
                             </div>
@@ -89,12 +92,23 @@
                             </div>
                         </div>
                         <div class="project">
+                            <h4 class="project-title">To Do List</h4>
                             <div class="project-img">
                                 <img src="./img/smartmockups_khkqshb8.png" alt="mockup">
                             </div>
                             <div class="project-links">
                                 <a href="https://semirkardovich.github.io/To-Do-List/" target="_blank" class="site-link">View site</a>
                                 <a href="https://github.com/SemirKardovich/To-Do-List" target="_blank" class="code-link">View code</a>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <h4 class="project-title">GitHub Profile Finder</h4>
+                            <div class="project-img">
+                                <img src="./img/smartmockups_khtnpohx.png" alt="mockup">
+                            </div>
+                            <div class="project-links">
+                                <a href="https://semirkardovich.github.io/GitHub-Profile-Search/" target="_blank" class="site-link">View site</a>
+                                <a href="https://github.com/SemirKardovich/GitHub-Profile-Search" target="_blank" class="code-link">View code</a>
                             </div>
                         </div>
                     </div>
