--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <p> I am a Front-end Web Developer from Skopje.
                         I enjoy turning complex problems into simple, beautiful and responsive websites.
                         When I'm not coding, you'll find me hanging out with my friends or riding my mountain bike.</p>
-                    <a href="https://github.com/SemirKardovich/MyWeb/raw/master/img/SemirKardovikj_CV.pdf" class="resume"><i class="fas fa-download "></i> Download resume</a>
+                    <a href="https://github.com/SemirKardovich/MyWeb/raw/92b88ca4745bdf7d690e148d07b2c7b439540546/img/Semir's%20Resume.pdf" class="resume"><i class="fas fa-download "></i> Download resume</a>
                 </div>
             </div>
         </section>
